test_suite5/ALAN/test_suite/alan-2022-examples/failing/002980_mutation.alan
source z begin if 3 get relax end end
